<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/profile"
        android:id="@+id/profile"
        android:icon="@drawable/person"
        app:showAsAction="never" />

    <item
        android:title="@string/store"
        android:id="@+id/store"
        android:icon="@drawable/shop_cart"
        app:showAsAction="never" />

    <item
        android:title="@string/my_cupons"
        android:id="@+id/my_cupons"
        app:showAsAction="never" />

    <item
        android:title="@string/log_out"
        android:id="@+id/log_out"
        android:icon="@drawable/exit_door"
        app:showAsAction="never" />

</menu>