<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

   <LinearLayout
       android:id="@+id/distances_today"
       android:layout_width="match_parent"
       android:layout_height="250dp"
       android:background="@drawable/rounded_rectangle"
       android:orientation="vertical"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       android:layout_marginTop="16dp"
       android:layout_marginEnd="32dp"
       android:layout_marginStart="32dp">

       <TextView
           android:id="@+id/textactivity"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="top"
           android:gravity="center"
           android:padding="16dp"
           android:text="@string/distances_from_today"
           android:textColor="#ffffff"
           android:textStyle="bold"
           android:textSize="20sp"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_marginTop="8dp"
           android:background="@drawable/semi_rounded_rectangle"
           android:orientation="horizontal"
           android:layout_gravity="bottom"
           android:baselineAligned="false">

           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:background="@color/terciaryBox"
               android:layout_weight="1"
               android:layout_gravity="start"
               android:layout_margin="8dp"
               android:layout_marginTop="8dp">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:text="@string/walking_n_n_0m"
                   android:gravity="center"
                   android:textColor="#ffffff"
                   android:textSize="18sp"/>
           </LinearLayout>

           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:background="@color/terciaryBox"
               android:layout_weight="1"
               android:layout_gravity="end"
               android:layout_margin="8dp">


               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:text="@string/bike_riding_n_n0m"
                   android:gravity="center"
                   android:textColor="#ffffff"
                   android:textSize="18sp"
                   android:textStyle="bold"/>

           </LinearLayout>

       </LinearLayout>

   </LinearLayout>

    <LinearLayout
        android:id="@+id/creds_today"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/rounded_rectangle"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/distances_today"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/credits_made_today"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:background="@drawable/semi_rounded_rectangle"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:baselineAligned="false">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_0"
                android:textSize="60sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="#ffffff"/>

            </LinearLayout>

        </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>